data/derived/comb/progs/unify/prog1024.ml.out
Characters 24-25:
  let _ = pipe [(fun x -> 2)] 4;;
                          ^
Error: This expression has type int but an expression was expected of type
         'a -> 'a
